--- a/FeatureExtraction.ipynb
+++ b/FeatureExtraction.ipynb
@@ -6,6 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "Feature extraction from the datasets\n",
+    "Author: Kai Li Ong\n",
+    "\"\"\"\n",
+    "\n",
     "from pprint import pprint\n",
     "import os\n",
     "import cv2\n",
@@ -472,7 +477,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
