--- a/FeatureExtraction.ipynb
+++ b/FeatureExtraction.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "\"\"\"\n",
     "Feature extraction from the datasets\n",
-    "Author: Kai Li Ong\n",
+    "Author: Kai Li Ong & Danial Haris\n",
     "\"\"\"\n",
     "\n",
     "from pprint import pprint\n",
@@ -477,7 +477,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
