--- a/method/S2_Feature_Extraction.ipynb
+++ b/method/S2_Feature_Extraction.ipynb
@@ -39,7 +39,7 @@
    "outputs": [],
    "source": [
     "# Load an image from folder\n",
-    "#main_project_path = r\"C:\\Users\\danny\\OneDrive - bwedu\\EU4M MASTER SUBJECTS\\SEMESTER 2\\Künstliche Intelligenz\\AI\\ImageClassificationMethods\"\n",
+    "#main_project_path = r\"C:\\Users\\danny\\OneDrive - bwedu\\EU4M MASTER SUBJECTS\\SEMESTER 2\\Kuenstliche Intelligenz\\AI\\ImageClassificationMethods\"\n",
     "main_project_path = r\"C:\\Users\\KylieOng\\Documents\\GitHub\\ImageClassificationMethods\"\n",
     "image_path = os.path.join(main_project_path,\"dataset\", \"Kamm\", \"image_10.png\")\n",
     "\n",
@@ -451,7 +451,7 @@
    ],
    "source": [
     "# Load images\n",
-    "#main_project_path = r\"C:\\Users\\danny\\OneDrive - bwedu\\EU4M MASTER SUBJECTS\\SEMESTER 2\\Künstliche Intelligenz\\AI\\ImageClassificationMethods\"\n",
+    "#main_project_path = r\"C:\\Users\\danny\\OneDrive - bwedu\\EU4M MASTER SUBJECTS\\SEMESTER 2\\Kuenstliche Intelligenz\\AI\\ImageClassificationMethods\"\n",
     "main_project_path = r\"C:\\Users\\KylieOng\\Documents\\GitHub\\ImageClassificationMethods\"\n",
     "image_folder = os.path.join(main_project_path,\"dataset\")\n",
     "feature_path = os.path.join(main_project_path,\"feature\",\"feature.csv\")\n",
