--- a/method/M1_Decision_Tree_Method.ipynb
+++ b/method/M1_Decision_Tree_Method.ipynb
@@ -44,6 +44,7 @@
    "outputs": [],
    "source": [
     "# Load dataset features\n",
+    "\n",
     "# main_project_path = r\"C:\\Users\\danny\\OneDrive - bwedu\\EU4M MASTER SUBJECTS\\SEMESTER 2\\Kuenstliche Intelligenz\\AI\\ImageClassificationMethods\"\n",
     "main_project_path = r\"C:\\Users\\KylieOng\\Documents\\GitHub\\ImageClassificationMethods\"\n",
     "image_folder = os.path.join(main_project_path,\"dataset\")\n",
@@ -62,6 +63,7 @@
    },
    "outputs": [],
    "source": [
+    "# Split a dataset into train and test\n",
     "def train_test_split(df, test_size):\n",
     "\n",
     "    if isinstance(test_size, float):\n",
@@ -250,6 +252,13 @@
    "source": [
     "sub_tree = {\"question\": [\"yes_answer\",\n",
     "                         \"no_answer\"]}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Decision Tree Algorithm"
    ]
   },
   {
@@ -446,9 +455,7 @@
     "tree = decision_tree_algorithm(train_df)\n",
     "#tree = decision_tree_algorithm(train_df, max_depth=10)\n",
     "\n",
-    "pprint.pprint(tree, width=50)\n",
-    "\n",
-    "#test_df"
+    "pprint.pprint(tree, width=50)"
    ]
   },
   {
