--- a/method/M3_Nearest_Neighbour_Method.ipynb
+++ b/method/M3_Nearest_Neighbour_Method.ipynb
@@ -1,19 +1,30 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "import pandas as pd"
+    "# Decision Tree Method with Library\n",
+    "\n",
+    "### Author: Danial Haris & Kai Li Ong"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from imutils import paths\n",
+    "from scipy.spatial.distance import minkowski\n",
+    "\n",
+    "import pandas as pd\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -22,22 +33,214 @@
    },
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'imutils'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-362292f89e8b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mimutils\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpaths\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mspatial\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdistance\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mminkowski\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mmy_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'*\\ImageClassificationMethods\\feature\\feature.csv'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mmy_data\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'imutils'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>contour_points</th>\n",
+       "      <th>amount_contours</th>\n",
+       "      <th>rect_area</th>\n",
+       "      <th>hull_area</th>\n",
+       "      <th>approximation_area</th>\n",
+       "      <th>contour_perimeters</th>\n",
+       "      <th>corners</th>\n",
+       "      <th>harris_corners</th>\n",
+       "      <th>ratio_wide_length</th>\n",
+       "      <th>contour_length_area_ratio</th>\n",
+       "      <th>contour_length_rect_area_ratio</th>\n",
+       "      <th>contour_length_hull_area_ratio</th>\n",
+       "      <th>contour_rect_length_ratio</th>\n",
+       "      <th>contour_hull_length_ratio</th>\n",
+       "      <th>extent</th>\n",
+       "      <th>solidity</th>\n",
+       "      <th>hull_rectangle_ratio</th>\n",
+       "      <th>labels</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>676</td>\n",
+       "      <td>3</td>\n",
+       "      <td>20729.545245</td>\n",
+       "      <td>14977.0</td>\n",
+       "      <td>10152.5</td>\n",
+       "      <td>789.494509</td>\n",
+       "      <td>53</td>\n",
+       "      <td>901</td>\n",
+       "      <td>3.399329</td>\n",
+       "      <td>0.077310</td>\n",
+       "      <td>0.038085</td>\n",
+       "      <td>0.052714</td>\n",
+       "      <td>1.149038</td>\n",
+       "      <td>1.318301</td>\n",
+       "      <td>0.492630</td>\n",
+       "      <td>0.681845</td>\n",
+       "      <td>0.722495</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1725</td>\n",
+       "      <td>3</td>\n",
+       "      <td>65025.000000</td>\n",
+       "      <td>65025.0</td>\n",
+       "      <td>48154.5</td>\n",
+       "      <td>1847.192994</td>\n",
+       "      <td>92</td>\n",
+       "      <td>1582</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.038508</td>\n",
+       "      <td>0.028407</td>\n",
+       "      <td>0.028407</td>\n",
+       "      <td>1.810974</td>\n",
+       "      <td>1.810974</td>\n",
+       "      <td>0.737693</td>\n",
+       "      <td>0.737693</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>514</td>\n",
+       "      <td>2</td>\n",
+       "      <td>18142.000000</td>\n",
+       "      <td>14201.0</td>\n",
+       "      <td>11280.5</td>\n",
+       "      <td>561.220343</td>\n",
+       "      <td>62</td>\n",
+       "      <td>305</td>\n",
+       "      <td>0.487047</td>\n",
+       "      <td>0.049727</td>\n",
+       "      <td>0.030935</td>\n",
+       "      <td>0.039520</td>\n",
+       "      <td>0.977736</td>\n",
+       "      <td>1.134376</td>\n",
+       "      <td>0.622092</td>\n",
+       "      <td>0.794733</td>\n",
+       "      <td>0.782769</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>492</td>\n",
+       "      <td>83</td>\n",
+       "      <td>6807.694670</td>\n",
+       "      <td>4847.5</td>\n",
+       "      <td>1323.5</td>\n",
+       "      <td>598.867093</td>\n",
+       "      <td>52</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0.124905</td>\n",
+       "      <td>0.447584</td>\n",
+       "      <td>0.087969</td>\n",
+       "      <td>0.123541</td>\n",
+       "      <td>1.140181</td>\n",
+       "      <td>1.214194</td>\n",
+       "      <td>0.196542</td>\n",
+       "      <td>0.276019</td>\n",
+       "      <td>0.712062</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>988</td>\n",
+       "      <td>5</td>\n",
+       "      <td>54314.985718</td>\n",
+       "      <td>33316.0</td>\n",
+       "      <td>25395.5</td>\n",
+       "      <td>1076.641697</td>\n",
+       "      <td>54</td>\n",
+       "      <td>1504</td>\n",
+       "      <td>1.197183</td>\n",
+       "      <td>0.042451</td>\n",
+       "      <td>0.019822</td>\n",
+       "      <td>0.032316</td>\n",
+       "      <td>1.150258</td>\n",
+       "      <td>1.313623</td>\n",
+       "      <td>0.466943</td>\n",
+       "      <td>0.761256</td>\n",
+       "      <td>0.613385</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   contour_points  amount_contours     rect_area  hull_area  \\\n",
+       "0             676                3  20729.545245    14977.0   \n",
+       "1            1725                3  65025.000000    65025.0   \n",
+       "2             514                2  18142.000000    14201.0   \n",
+       "3             492               83   6807.694670     4847.5   \n",
+       "4             988                5  54314.985718    33316.0   \n",
+       "\n",
+       "   approximation_area  contour_perimeters  corners  harris_corners  \\\n",
+       "0             10152.5          789.494509       53             901   \n",
+       "1             48154.5         1847.192994       92            1582   \n",
+       "2             11280.5          561.220343       62             305   \n",
+       "3              1323.5          598.867093       52              15   \n",
+       "4             25395.5         1076.641697       54            1504   \n",
+       "\n",
+       "   ratio_wide_length  contour_length_area_ratio  \\\n",
+       "0           3.399329                   0.077310   \n",
+       "1           1.000000                   0.038508   \n",
+       "2           0.487047                   0.049727   \n",
+       "3           0.124905                   0.447584   \n",
+       "4           1.197183                   0.042451   \n",
+       "\n",
+       "   contour_length_rect_area_ratio  contour_length_hull_area_ratio  \\\n",
+       "0                        0.038085                        0.052714   \n",
+       "1                        0.028407                        0.028407   \n",
+       "2                        0.030935                        0.039520   \n",
+       "3                        0.087969                        0.123541   \n",
+       "4                        0.019822                        0.032316   \n",
+       "\n",
+       "   contour_rect_length_ratio  contour_hull_length_ratio    extent  solidity  \\\n",
+       "0                   1.149038                   1.318301  0.492630  0.681845   \n",
+       "1                   1.810974                   1.810974  0.737693  0.737693   \n",
+       "2                   0.977736                   1.134376  0.622092  0.794733   \n",
+       "3                   1.140181                   1.214194  0.196542  0.276019   \n",
+       "4                   1.150258                   1.313623  0.466943  0.761256   \n",
+       "\n",
+       "   hull_rectangle_ratio  labels  \n",
+       "0              0.722495       0  \n",
+       "1              1.000000       0  \n",
+       "2              0.782769       0  \n",
+       "3              0.712062       0  \n",
+       "4              0.613385       0  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from imutils import paths\n",
-    "from scipy.spatial.distance import minkowski\n",
+    "# Load dataset features\n",
     "\n",
-    "my_data = pd.read_csv('*\\ImageClassificationMethods\\feature\\feature.csv')\n",
+    "#main_project_path = r\"C:\\Users\\danny\\OneDrive - bwedu\\EU4M MASTER SUBJECTS\\SEMESTER 2\\Kuenstliche Intelligenz\\AI\\ImageClassificationMethods\"\n",
+    "main_project_path = r\"C:\\Users\\KylieOng\\Documents\\GitHub\\ImageClassificationMethods\"\n",
+    "image_folder = os.path.join(main_project_path,\"dataset\")\n",
+    "feature_path = os.path.join(main_project_path,\"feature\",\"feature.csv\")\n",
+    "\n",
+    "my_data = pd.read_csv(feature_path)\n",
     "my_data.head()"
    ]
   },
@@ -128,17 +331,6 @@
     "X_train = scaler.fit_transform(X_train)\n",
     "X_test = scaler.transform(X_test)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -247,13 +439,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'ImageResizer' from 'preprocessing' (C:\\Users\\KylieOng\\anaconda3\\lib\\site-packages\\preprocessing\\__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-12-95ed2325e827>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mpreprocessing\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mImageResizer\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mpreprocessing\u001b[0m \u001b[1;32mimport\u001b[0m  \u001b[0mSimpleDatasetLoader\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'ImageResizer' from 'preprocessing' (C:\\Users\\KylieOng\\anaconda3\\lib\\site-packages\\preprocessing\\__init__.py)"
+     ]
+    }
+   ],
    "source": [
     "from preprocessing import ImageResizer\n",
     "from preprocessing import  SimpleDatasetLoader"
@@ -261,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -278,23 +482,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[INFO] loading images...\n",
-      "[INFO] processed 500/800\n",
-      "[INFO] features matrix: 2.3MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"[INFO] loading images...\")\n",
     "imagePaths = list(paths.list_images(args[\"dataset\"]))\n",
@@ -313,21 +507,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Brush' 'Comb']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# encode the labels as integers\n",
     "le = LabelEncoder()\n",
@@ -337,27 +523,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1, 1, 0, 1, 0, 1, 0, 1, 1, 1, 0, 0, 1, 0, 0, 0, 0, 0, 1, 1, 1, 1,\n",
-       "       1, 1, 0, 0, 0, 1, 1, 1, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1, 0, 0, 0, 0,\n",
-       "       1, 1, 1, 1, 1, 1, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 0, 0, 1,\n",
-       "       0, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 1, 1, 1], dtype=int64)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# partition the data into training and testing splits using 75% of\n",
     "# the data for training and the remaining 25% for testing\n",
@@ -366,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -379,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -395,21 +567,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 0, 0, 1, 0, 1, 1, 1, 1, 1, 0, 1, 0, 0, 0, 1, 0, 0, 1, 0, 1, 1, 1, 1, 0, 0, 1, 1, 1, 1, 0, 0, 1, 1, 0, 0, 0, 0, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 1, 1, 0, 0, 1, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 1, 1, 0, 1]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "prediction_2 = knn_predict(trainX, testX, trainY, testY, k=5, p=1)\n",
     "print(prediction_2)"
@@ -417,32 +581,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.8\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "       brush       0.80      0.80      0.80        41\n",
-      "        comb       0.79      0.79      0.79        39\n",
-      "\n",
-      "    accuracy                           0.80        80\n",
-      "   macro avg       0.80      0.80      0.80        80\n",
-      "weighted avg       0.80      0.80      0.80        80\n",
-      "\n",
-      "[[33  8]\n",
-      " [ 8 31]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(accuracy_score(testY, prediction_2))\n",
     "print(classification_report(testY, prediction_2, target_names=[\"brush\", \"comb\"]))\n",
@@ -466,7 +611,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
