--- a/method/M1_Decision_Tree_Method.ipynb
+++ b/method/M1_Decision_Tree_Method.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Decision Tree\n",
     "\n",
-    "### Author: Danial Haris & Kai Li Ong"
+    "### Author: Danial Haris (lida1018 - 67252) & Kai Li Ong (onka1012 - 67254)"
    ]
   },
   {
