--- a/method/M2_Naive_Bayes_Method.ipynb
+++ b/method/M2_Naive_Bayes_Method.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Naive Bayes\n",
     "\n",
-    "### Author: Danial Haris & Kai Li Ong"
+    "### Author: Danial Haris (lida1018 - 67252) & Kai Li Ong (onka1012 - 67254)"
    ]
   },
   {
