--- a/method/S2_Feature_Extraction.ipynb
+++ b/method/S2_Feature_Extraction.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Feature extraction from the datasets\n",
     "\n",
-    "### Author: Danial Haris & Kai Li Ong"
+    "### Author: Danial Haris (lida1018 - 67252) & Kai Li Ong (onka1012 - 67254)"
    ]
   },
   {
