Random Forest Update

--- a/method/M2_Naive_Bayes_Method.ipynb
+++ b/method/M2_Naive_Bayes_Method.ipynb
@@ -40,8 +40,8 @@
    "outputs": [],
    "source": [
     "# Define folder\n",
-    "#main_project_path = r\"C:\\Users\\danny\\OneDrive - bwedu\\EU4M MASTER SUBJECTS\\SEMESTER 2\\Kuenstliche Intelligenz\\AI\\ImageClassificationMethods\"\n",
-    "main_project_path = r\"C:\\Users\\KylieOng\\Documents\\GitHub\\ImageClassificationMethods\"\n",
+    "main_project_path = r\"C:\\Users\\danny\\OneDrive - bwedu\\EU4M MASTER SUBJECTS\\SEMESTER 2\\Kuenstliche Intelligenz\\AI\\ImageClassificationMethods\"\n",
+    "#main_project_path = r\"C:\\Users\\KylieOng\\Documents\\GitHub\\ImageClassificationMethods\"\n",
     "image_folder = os.path.join(main_project_path,\"dataset\")\n",
     "feature_path = os.path.join(main_project_path,\"feature\",\"feature.csv\")"
    ]
@@ -94,6 +94,13 @@
     "    for row in dataset:\n",
     "        row[column] = lookup[row[column]]\n",
     "    return lookup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Split dataset into k folds"
    ]
   },
   {
