--- a/method/M4_Random Forest_Method.ipynb
+++ b/method/M4_Random Forest_Method.ipynb
@@ -10,6 +10,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "An extension of bagging that in addition to building trees based on multiple samples of the training data. It will also constraints the features that can be used to build trees, forcing trees to be different."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -388,16 +395,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest Accuracy: 76.375%\n",
-      "Random Forest Accuracy: 81.750%\n",
-      "Random Forest Accuracy: 82.750%\n"
+      "Random Forest Accuracy  1 :  76.375 %\n",
+      "Random Forest Accuracy  5 :  81.75 %\n",
+      "Random Forest Accuracy  10 :  82.75 %\n"
      ]
     }
    ],
@@ -426,8 +433,15 @@
     "    scores = evaluate_algorithm(dataset, random_forest, n_folds, max_depth, min_size, sample_size, n_trees, n_features)\n",
     "    #print('Trees: %d' % n_trees)\n",
     "    #print('Scores: %s' % scores)\n",
-    "    print('Random Forest Accuracy: %.3f%%' % (sum(scores)/float(len(scores))))"
+    "    print('Random Forest Accuracy ', n_trees, \": \", (sum(scores)/float(len(scores))), \"%\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
