--- a/method/M1_Decision_Tree_Method.ipynb
+++ b/method/M1_Decision_Tree_Method.ipynb
@@ -45,10 +45,10 @@
    "source": [
     "# Load dataset features\n",
     "\n",
-    "# main_project_path = r\"C:\\Users\\danny\\OneDrive - bwedu\\EU4M MASTER SUBJECTS\\SEMESTER 2\\Kuenstliche Intelligenz\\AI\\ImageClassificationMethods\"\n",
-    "main_project_path = r\"C:\\Users\\KylieOng\\Documents\\GitHub\\ImageClassificationMethods\"\n",
+    "main_project_path = r\"C:\\Users\\danny\\OneDrive - bwedu\\EU4M MASTER SUBJECTS\\SEMESTER 2\\Kuenstliche Intelligenz\\AI\\ImageClassificationMethods\"\n",
+    "# main_project_path = r\"C:\\Users\\KylieOng\\Documents\\GitHub\\ImageClassificationMethods\"\n",
     "image_folder = os.path.join(main_project_path,\"dataset\")\n",
-    "feature_path = os.path.join(main_project_path,\"feature\",\"feature.csv\")\n",
+    "feature_path = os.path.join(main_project_path,\"feature\",\"feature-test.csv\")\n",
     "\n",
     "df = pd.read_csv(feature_path)"
    ]
@@ -503,7 +503,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
