--- a/method/M4_Random Forest_Method.ipynb
+++ b/method/M4_Random Forest_Method.ipynb
@@ -6,7 +6,8 @@
    "source": [
     "# Random Forest\n",
     "\n",
-    "### Author: Danial Haris (lida1018 - 67252) & Kai Li Ong (onka1012 - 67254)"
+    "#### - Danial Hawari [ lida1018 ] [ 67252 ]\n",
+    "#### - Kai Li Ong  [ onka1012 ] [ 67254 ]"
    ]
   },
   {
